# fenicsx-error-estimation

fenicsx_error_estimation/: install_project.sh
fenicsx_error_estimation/build-dir/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  install_manifest.txt  libfenicsx_error_estimation.so.0.0  libfenicsx_error_estimation.so.0.0.0  libfenicsx_error_estimation.so.0.5  libfenicsx_error_estimation.so.0.5.0
fenicsx_error_estimation/build-dir/fenicsx_error_estimation/: FENICSX_EESTMConfig.cmake  FENICSX_ERROR_ESTIMATIONConfig.cmake
fenicsx_error_estimation/cpp/: CMakeLists.txt  FENICSX_ERROR_ESTIMATIONConfig.cmake.in  projected_local_solver.cpp  projected_local_solver.hpp
fenicsx_error_estimation/python/: CMakeLists.txt  setup.py
fenicsx_error_estimation/python/demo/: test_estimator.py
fenicsx_error_estimation/python/fenicsx_error_estimation/: estimate.py  wrappers.cpp
